# Compiler

./: .gitignore  CMakeLists.txt  DeqCompiler.exe.stackdump  Makefile
include/: ast.hpp  files.h  lexer.h  lexer.hpp  strings.h  typing.hpp
include/ast_nodes/: assign_node.hpp  expression_node.hpp  literal_node.hpp  node.hpp  operator_node.hpp  statements_node.hpp  vardecl_node.hpp
js/: package.json
js/scripts/: test.deq
js/src/: tokenizer.js
scripts/: simple.deq  test.deq
src/: ast.cpp  files.c  lexer.c  lexer.cpp  main.c  main.cpp  main.js  strings.c  tokenizer.js  typing.cpp
src/ast_nodes/: assign_node.cpp  operator_node.cpp  vardecl_node.cpp
